--- a/nrg_1/pom.xml
+++ b/nrg_1/pom.xml
@@ -59,6 +59,12 @@
         <artifactId>javafx-controls</artifactId>
         <version>21</version>
     </dependency>
+
+	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-amqp</artifactId>
+</dependency>
+
 	</dependencies>
 
 	<build>
