--- a/nrg_1/src/main/resources/application.properties
+++ b/nrg_1/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=nrg_1
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
