Setup mit PostgreSQL, init.sql und REST API-Anbindung

--- a/frontend/nrg_1/src/main/resources/application.properties
+++ b/frontend/nrg_1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=nrg_1
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/energy-db
+spring.datasource.username=energy
+spring.datasource.password=energy
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
