--- a/nrg_1/pom.xml
+++ b/nrg_1/pom.xml
@@ -65,6 +65,12 @@
     <artifactId>spring-boot-starter-amqp</artifactId>
 </dependency>
 
+<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+	</dependencies>
+
 	</dependencies>
 
 	<build>
