--- a/frontend/nrg_1/pom.xml
+++ b/frontend/nrg_1/pom.xml
@@ -59,10 +59,10 @@
         <artifactId>javafx-controls</artifactId>
         <version>21</version>
     </dependency>
-
 	<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-amqp</artifactId>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-graphics</artifactId>
+    <version>20</version>
 </dependency>
 
 <dependency>
@@ -81,6 +81,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+                <mainClass>at.uastw.nrg_1.gui.EnergyApp</mainClass>
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
